# glocalwl

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  globalwl.cbp  main.cpp
src/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  ColorRefinementKernel.cpp  ColorRefinementKernel.h  Graph.cpp  Graph.h  GraphletKernel.cpp  GraphletKernel.h  ShortestPathKernel.cpp  ShortestPathKernel.h  WeisfeilerLehmanThreeGlobal.cpp  WeisfeilerLehmanThreeGlobal.h  WeisfeilerLehmanThreeLocal.cpp  WeisfeilerLehmanThreeLocal.h  WeisfeilerLehmanTwoGlobal.cpp  WeisfeilerLehmanTwoGlobal.h  WeisfeilerLehmanTwoLocal.cpp  WeisfeilerLehmanTwoLocal.cpp~  WeisfeilerLehmanTwoLocal.h
